# Hiena

./: CMakeLists.txt  Readme.md
TestApp/: .gitignore  gradle.properties
TestApp/app/: build.gradle
TestApp/app/src/main/: AndroidManifest.xml
TestApp/app/src/main/cpp/: AndroidOut.cpp  CMakeLists.txt  MainActivity.cpp  MainActivity.hpp  TestClass.cpp  TestClass.hpp  main.cpp
TestApp/app/src/main/java/com/testapp/example/: MainActivity.java  TestClass.java
TestApp/app/src/main/res/values/: strings.xml
include/Hiena/: CheckException.hpp  CheckedJniEnv.hpp  Field.hpp  Hiena.hpp  JArray.hpp  JavaInvoker.hpp  JavaLang.hpp  LICENSE.txt  LowLevel.hpp  Readme.md  SignatureComposer.hpp
include/Hiena/detail/: CheckedJniEnv.hpp  CheckedJniMacros.hpp  FieldBase.hpp  JArrayBase.hpp  JavaInvoker.hpp  JavaObjectBase.hpp  SignatureComposer.hpp  UndefCheckedJniMacros.hpp
include/Hiena/meta/: FieldCounter.hpp  FuncSig.hpp  Helpers.hpp  MemFunVariants.hpp  Preprocessor.hpp
include/Hiena/support/: CompileTimeString.hpp  SignatureComposer.hpp
include/Hiena/utility/: ClassMacros.hpp  CompileTimeString.hpp  Helpers.hpp  ImplementationMacros.hpp  JniTraits.hpp  Macros.hpp
src/: CMakeLists.txt  CheckException.cpp  Hiena.cpp  JavaLang.cpp  JavaObjectBase.cpp
